tests/valid/trait/assoc_projection_trait_method_signature_compat.facet
trait Iterator {
  type Item;
}

impl Iterator for unrestricted isize {
  type Item = isize;
}

trait Consumer {
  fn consume(self: Self, value: unrestricted <unrestricted isize as Iterator>::Item) -> unrestricted <unrestricted isize as Iterator>::Item;
}

impl Consumer for unrestricted () {
  fn consume(self: Self, value: unrestricted isize) -> unrestricted isize {
    value
  }
}

fn main() -> unrestricted isize {
  (<unrestricted () as Consumer>::consume () 1)
}
