tests/invalid/trait/assoc_default_syntax_deferred.facet
trait Iterator {
  type Item = unrestricted isize;
}

impl Iterator for unrestricted isize {}

fn main() -> unrestricted () {
  ()
}
